# shadows

./: .gitignore  Pipfile  pipenv_installer_debugmode.sh  requirements.txt  setupUbuntuBase.sh
acoustic_model/: aucoustic_model.py  wolfram_prompts.txt
cameraproj/: initial_tests.ipynb  machine_params.json  threaded_cam5.py  threaded_cam6.py
cpp/json_test_cmake/: CMakeLists.txt  main.cpp  params.json
git/: git_ssh_auth_readme.md
jupyter/: Google Mapping.ipynb  ML GraphViz.ipynb  ML Local - Classiers - Udacity - UD120.ipynb  ML Local - Continuous Regression Methods - Udacity - UD120.ipynb  ML Local - LDA Analysis.ipynb  ML LocalServer - Learnings.ipynb  ML OpenAI _ Experiments.ipynb  ML_Learnings2022.ipynb  Markdown Cheatsheet.ipynb  apikey.txt  bionxOptimusBms12s.ipynb  iris
machineSetup/: debug_pipenv_install.sh  setupFedoraBase.sh  setupOneDrive.sh  setupUbuntuBase.sh
machineSetup/HOME/.ssh/: config
machineSetup/ROOTDIR/: .zshenv
machineSetup/ROOTDIR/etc/samba/: smb.conf
machineSetup/ZSH/: .zshrc
machineSetup/pipenv/: pipenv_setup.md
python/: geotst.py  junkdrawer.py  test1.py  test_openai.py
